--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
 @font-face {
   font-family:font2;
   src: url(NexaBold.otf);
-  size-adjust: 300%;
+  size-adjust: 90%;
 }
 p{
 color:white;}
@@ -25,10 +25,11 @@ div.absolute {
   border: 3px solid #73AD21;
 }
 </style>
-<p align="center" style="font-family:font">Countdown until we see each other:</p>
+<p align="center" style="font-family:font">Days until we see each other:</p>
 <p style="font-family:font"> </p>
 <p align="center" id="demo" style="font-family:font"></p>
 <p align="center" style="font-family:font2" class="absolute">ly bebs <3</p>
+<p align="center" style="font-family:font2" class="absolute">made with love for Andra</p>
 <script>
 // Set the date we're counting down to
 var countDownDate = new Date("Apr 2, 2022 06:30:25").getTime();
