--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!-- Display the countdown timer in an element -->
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+</head>
 <style>
 body {
 	background-image: url('img.png');
